Mise à jour par session

--- a/templates/pages/index.html.twig
+++ b/templates/pages/index.html.twig
@@ -190,7 +190,7 @@
                 {% endfor %}
                     </div>
                 {{ form_start(form) }}
-                <div class="bulle row ">
+                <div class="bulle row block-responsive">
                     {% form_theme form 'bootstrap_5_layout.html.twig' %}
                     <div class="col-sm-9 container-sm mb-3 mt-3">
                         <div class="form-group">
