--- a/templates/reservations/index.html.twig
+++ b/templates/reservations/index.html.twig
@@ -24,7 +24,7 @@
     <div class="parallax-effect3">
         <div class="container">
             <div class="row">
-                <div class="col form-fond wow animate__animated animate__zoomIn mt-5">
+                <div class="col form-fond wow animate__animated animate__zoomIn mt-5 mb-3">
                     {{ form_start(formulaireCourse) }}
                     {% form_theme formulaireCourse 'bootstrap_5_layout.html.twig' %}
                         <H2 class="H2-corps">Formulaire de réservation </H2>
