--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -24,3 +24,19 @@ body {
     background-color: #FFFFFF;
 
 }
+
+.card {
+    box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1);
+
+}
+
+
+.card2 {
+    background-color: transparent;
+    color: #FFFFFF;
+}
+.card2 {
+    background-color: transparent;
+    border-radius: 20px;
+    color: #FFFFFF;
+}
