--- a/templates/stripe/paiement.html.twig
+++ b/templates/stripe/paiement.html.twig
@@ -120,6 +120,7 @@
             <div class="col-sm-6 mt-5">
                 <div class="paiement">
             <H2 class="H2-corps">Paiement sécurisé avec Stripe</H2>
+                    {{ prix }}
             {% for rubrique, messages in app.flashes %}
                 <div class="alert alert-{{ rubrique }}">
                     {% for message in messages %}
