--- a/templates/administrator/index.html.twig
+++ b/templates/administrator/index.html.twig
@@ -11,11 +11,11 @@
 
     <div class="border d-flex align-items-center justify-content-center" style="height: 700px;">
         <div  class ="card2 text-dark bg-light mb-3 rounded-30" style="max-width: 50rem">
-            <span><H1 class="title card-header text-center">Bienvenue Andy</H1></span>
+            <span><H1 class="title card-header text-center">Bienvenue Mr Cardoso</H1></span>
             <div class="card-body text-center">
 
-                <a class="bouton btn btn-primary" href="{{ path('clients_index') }}">Clients</a>
-                <a class="bouton btn btn-primary" href="{{ path('admin_course') }}">Mes Courses</a>
+                <a class="bouton btn btn-primary" href="{{ path('clients_index') }}">Mes réservations</a>
+                <a class="bouton btn btn-primary" href="{{ path('contact_index') }}">Mes contacts emails</a>
                 <a class="bouton btn btn-danger" href="/{{ path('app_logout') }}">Se déconnecter</a>
 
 
