--- a/templates/pages/confidentialite.html.twig
+++ b/templates/pages/confidentialite.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Confidentialité{% endblock %}
+{% block title %}Politique de confidentialité{% endblock %}
 
 {% block stylesheets %}
     {{ parent() }}
