--- a/templates/pages/index.html.twig
+++ b/templates/pages/index.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Cardoso VTC votre chauffeur privée dur Frontignan, et Sète{% endblock %}
-{% block meta_description %}Cardoso VTC votre chauffeur privée sur Frontignan{% endblock %}
+{% block title %}Chauffeur privée sur Frontignan, Sète | Cardoso VTC 34{% endblock %}
+{% block meta_description %}VTC Frontignan - Cardoso VTC, Réservez votre VTC au meilleur prix{% endblock %}
 
 {% block stylesheets %}
     {{ parent() }}
