--- a/templates/reservations/index.html.twig
+++ b/templates/reservations/index.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Réservation VTC Frontignan{% endblock %}
-{% block meta_description %}Cardoso VTC votre chauffeur privée dur Frontignan{% endblock %}
+{% block title %}Réservation votre chauffeur privée en ligne{% endblock %}
+{% block meta_description %}Réservation VTC ou chauffeur privéeà Sète, Frontignan, Agde et Montpellier. Nous sommes disponibles 24h/24 et 7j/7{% endblock %}
 
 
 {% block stylesheets %}
