--- a/templates/administrator/clients/index.html.twig
+++ b/templates/administrator/clients/index.html.twig
@@ -11,7 +11,7 @@
             <div class="container">
             <div class="row-admin">
 
-            <H1 class="title card-header text-center">Liste des clients</H1>
+            <H1 class="title card-header text-center">Liste des réservations</H1>
             <div class="card-body text-center">
 
                 <table class="table">
@@ -42,8 +42,7 @@
                             <td>{{ client.telephone }}</td>
                             <td>{{ client.email }}</td>
                             <td>
-                                <a class="bouton btn btn-primary" href="{{ path('clients_show', {'id': client.id}) }}">Voir</a>
-                                <a class="bouton btn btn-success" href="{{ path('clients_edit', {'id': client.id}) }}">Éditer</a>
+                                {{ include('administrator/clients/_delete_form.html.twig') }}
                             </td>
                         </tr>
                     {% else %}
