--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="fr-FR">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -7,12 +7,12 @@
         <meta property="og:type" content="website" />
 
         <meta name="description" content="{% block meta_description %}{% endblock %}">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
+        <title>{% block title %}Cardoso VTC 34{% endblock %}</title>
+
         {% block stylesheets %}
             <link rel="stylesheet" href="{{ asset('css/main.css') }}">
             <link rel="canonical" href="https://www.cardosovtc34.fr/" />
-            <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
+            <link rel="icon" href="{{ asset('images/favicon.png') }}">
             <link rel="stylesheet" href="{{ asset('https://cdn.jsdelivr.net/npm/fullcalendar@5.10.2/main.min.css') }}" integrity="sha256-5veQuRbWaECuYxwap/IOE/DAwNxgm4ikX7nrgsqYp88=" crossorigin="anonymous">
             <link href="{{ asset('https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css') }}" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         {% endblock %}
@@ -165,7 +165,6 @@
                 Conception
                 <a class="text-reset" href="https://www.eric-parlaoz.fr/" target="_blank">Eric PARLAOZ</a>
                 /
-                <a class="text-reset" href="{{ asset('/admin') }}" >Administration</a>
             </div>
             <!-- Copyright -->
         </footer>
