--- a/templates/administrator/clients/show.html.twig
+++ b/templates/administrator/clients/show.html.twig
@@ -43,6 +43,18 @@
                 <th>Email</th>
                 <td>{{ client.email }}</td>
             </tr>
+            <tr>
+                <th>Adresse départ</th>
+                <td>{{ client.adresseDepart }}</td>
+            </tr>
+            <tr>
+                <th>Adresse arrivée</th>
+                <td>{{ client.adresseArrivee }}</td>
+            </tr>
+            <tr>
+                <th>Date</th>
+                <td>{{ client.date }}</td>
+            </tr>
         </tbody>
     </table>
 
