--- a/public/css/main.css
+++ b/public/css/main.css
@@ -38,13 +38,28 @@ body {
     text-align: center;
     color: #FFFFFF;
 }
+
+.section-admin {
+    padding-top: 100px;
+   padding-bottom: 100px;
+}
+
+.card-admin {
+    background: #f2F2F2F2;
+    border-radius: 20px;
+    padding: 20px;
+    box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1);
+    margin-bottom: 50px;
+
+}
+
 .logo {
     width: 180px;
 }
 
 .H1-head {
     font-family: Montserrat, Arial, Helvetica, sans-serif;
-    padding-top: 70px;
+    padding-top: 90px;
     color: #ffffff;
     font-weight: bold;
 
