--- a/templates/administrator/clients/index.html.twig
+++ b/templates/administrator/clients/index.html.twig
@@ -10,39 +10,34 @@
 {% block body %}
             <div class="container">
             <div class="row-admin">
-
             <H1 class="title card-header text-center">Liste des réservations</H1>
             <div class="card-body text-center">
 
                 <table class="table">
                     <thead>
                     <tr>
-                        <th>Id</th>
                         <th>Nom</th>
                         <th>Prénom</th>
-                        <th>Entreprise</th>
-                        <th>Rue</th>
-                        <th>Code postal</th>
-                        <th>Ville</th>
                         <th>Télephone</th>
-                        <th>Email</th>
+                        <th>Adresse depart</th>
+                        <th>Adresse arrivee</th>
+                        <th>date</th>
                         <th>Actions</th>
                     </tr>
                     </thead>
                     <tbody>
                     {% for client in clients %}
                         <tr class="table-light">
-                            <td>{{ client.id }}</td>
                             <td>{{ client.nom }}</td>
                             <td>{{ client.prenom }}</td>
-                            <td>{{ client.entreprise }}</td>
-                            <td>{{ client.rue }}</td>
-                            <td>{{ client.codepostal }}</td>
-                            <td>{{ client.ville }}</td>
                             <td>{{ client.telephone }}</td>
-                            <td>{{ client.email }}</td>
+                            <td>{{ client.adresseDepart }}</td>
+                            <td>{{ client.adresseArrivee }}</td>
+                            <td>{{ client.date }}</td>
                             <td>
                                 {{ include('administrator/clients/_delete_form.html.twig') }}
+                                <a class=" btn btn-primary" href="{{ path('clients_show', {'id': client.id}) }}">Infos clients</a>
+
                             </td>
                         </tr>
                     {% else %}
