--- a/templates/stripe/paiement.html.twig
+++ b/templates/stripe/paiement.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}Paiement sécurisé | Cardoso VTC 34{% endblock %}
-{% block meta_description %}Cardoso VTC votre chauffeur privée dur Frontignan{% endblock %}
+{% block meta_description %}Cardoso VTC votre chauffeur privée sur Frontignan{% endblock %}
 
 
 {% block stylesheets %}
@@ -152,25 +152,31 @@
     <section class="section5">
         <div class="container">
             <div class="titre">Cardoso VTC 34</div>
-            <h2  class="H2-corps">Témoignages clients</h2>
+            <h2 class="H2-corps">Témoignages clients</h2>
             <div class="row mx-auto">
                 <div class="col wow animate__animated animate__zoomIn">
-                    <div  class="name">Fred</div>
-                    <div class="comment">Professionnel</div>
-                    <img class="mb-3" src="{{ asset('images/etoiles.svg') }}" alt="">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto dolor esse expedita facere id libero modi perferendis rerum tenetur ullam! Adipisci eos excepturi fugiat id nemo, nostrum officiis reprehenderit voluptates?</p>
+                    <div class="temoignage mx-auto">
+                        <div class="name">Fred</div>
+                        <div class="comment">Professionnel</div>
+                        <img class="mb-3" src="{{ asset('images/etoiles.svg') }}" alt="">
+                        <p>La relation entretenue depuis 2019 s’appuie sur la qualité du service, la ponctualité, la gestion des imprévus, les véhicules utilisés et par ailleurs des échanges fluides.</p>
+                    </div>
                 </div>
                 <div class="col wow animate__animated animate__zoomIn">
-                    <div  class="name">Fred</div>
-                    <div class="comment">Professionnel</div>
-                    <img class="mb-3" src="{{ asset('images/etoiles.svg') }}" alt="">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto dolor esse expedita facere id libero modi perferendis rerum tenetur ullam! Adipisci eos excepturi fugiat id nemo, nostrum officiis reprehenderit voluptates?</p>
+                    <div class="temoignage mx-auto">
+                        <div class="name">Alice</div>
+                        <div class="comment">EFFICACE</div>
+                        <img class="mb-3" src="{{ asset('images/etoiles.svg') }}" alt="">
+                        <p>Cardoso VTC prend en charge nos touristes depuis plusieurs années : français ou internationaux sont toujours étonnés de leur sens du service, de leur gentillesse et de leurs bonnes adresses.</p>
+                    </div>
                 </div>
                 <div class="col wow animate__animated animate__zoomIn">
-                    <div  class="name">Fred</div>
-                    <div class="comment">Professionnel</div>
-                    <img class="mb-3" src="{{ asset('images/etoiles.svg') }}" alt="">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto dolor esse expedita facere id libero modi perferendis rerum tenetur ullam! Adipisci eos excepturi fugiat id nemo, nostrum officiis reprehenderit voluptates?</p>
+                    <div class="temoignage mx-auto">
+                        <div class="name">Eric</div>
+                        <div class="comment">PONCTUEL</div>
+                        <img class="mb-3" src="{{ asset('images/etoiles.svg') }}" alt="">
+                        <p>Chauffeur discret, cordial, très aimable et ponctuel...Conduite agréable, dans un véhicule confortable, propre et spacieux... Je recommande vivement.</p>
+                    </div>
                 </div>
             </div>
         </div>
