--- a/templates/stripe/success.html.twig
+++ b/templates/stripe/success.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello StripeController!{% endblock %}
+{% block title %}Paiement accepté{% endblock %}
 {% block meta_description %}Cardoso VTC votre chauffeur privée dur Frontignan{% endblock %}
 
 {% block stylesheets %}
