--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,8 +11,8 @@
 
         {% block stylesheets %}
             <link rel="stylesheet" href="{{ asset('css/main.css') }}">
-            <link rel="canonical" href="https://www.cardosovtc34.fr/" />
-            <link rel="icon" href="{{ asset('images/favicon.png') }}">
+            <link rel="canonical" href="https://www.cardosovtc34.fr" />
+            <link rel="icon" href="{{ asset('images/favicon.png') }}" type="image/png">
             <link rel="stylesheet" href="{{ asset('https://cdn.jsdelivr.net/npm/fullcalendar@5.10.2/main.min.css') }}" integrity="sha256-5veQuRbWaECuYxwap/IOE/DAwNxgm4ikX7nrgsqYp88=" crossorigin="anonymous">
             <link href="{{ asset('https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css') }}" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
         {% endblock %}
@@ -21,7 +21,7 @@
     <body>
     {% block header %}<nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <img class="ms-3 me-4 logo" src="{{ asset('images/logo-header.svg') }}" alt="">
+            <img class="ms-3 me-4 logo" src="{{ asset('images/logo-header.svg') }}" alt="Logo vtc frontignan">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -34,13 +34,16 @@
                         <a class="nav-link" href="{{ asset('#nosServices') }}">Nos services</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="{{ asset('#informations') }}">Informations</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="{{ asset('#clients') }}">Avis clients</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{ asset('#contact') }}">Contact</a>
                     </li>
                     <li class="nav-item">
-                        <a href="{{ asset('/reservation') }}" type="button" class="button-head btn btn-danger ms-3">Réserver votre course</a>
+                        <a href="{{ path('reservation') }}" type="button" class="button-head btn btn-danger ms-3">Réserver une course</a>
 
                     </li>
                 </ul>
@@ -98,16 +101,16 @@
                                 Réservez votre chauffeur privé
                             </h6>
                             <p>
-                                <a href="{{ asset('/reservation') }}" class="text-reset text-decoration-none">Chauffeur privé à Sete</a>
+                                <a href="{{ path('reservation') }}" class="text-reset text-decoration-none">Chauffeur privé à Sete</a>
                             </p>
                             <p>
-                                <a href="{{ asset('/reservation') }}" class="text-reset text-decoration-none">Chauffeur privé à Frontignan</a>
+                                <a href="{{ path('reservation') }}" class="text-reset text-decoration-none">Chauffeur privé à Frontignan</a>
                             </p>
                             <p>
-                                <a href="{{ asset('/reservation') }}" class="text-reset text-decoration-none">Chauffeur privé à Montpellier</a>
+                                <a href="{{ path('reservation') }}" class="text-reset text-decoration-none">Chauffeur privé à Montpellier</a>
                             </p>
                             <p>
-                                <a href="{{ asset('/reservation') }}" class="text-reset text-decoration-none">Chauffeur privé à Agde</a>
+                                <a href="{{ path('reservation') }}" class="text-reset text-decoration-none">Chauffeur privé à Agde</a>
                             </p>
                         </div>
                         <!-- Grid column -->
@@ -125,7 +128,7 @@
                                 <a href="{{ asset('#nosServices') }}" class="text-reset text-decoration-none">Nos services</a>
                             </p>
                             <p>
-                                <a href="{{ asset('/reservation') }}" class="text-reset text-decoration-none">Réservation en ligne</a>
+                                <a href="{{ path('reservation') }}" class="text-reset text-decoration-none">Réservation en ligne</a>
                             </p>
                             <p>
                                 <a href="{{ asset('#contact') }}" class="text-reset text-decoration-none">Contact</a>
@@ -159,12 +162,12 @@
             <!-- Copyright -->
             <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
                 © 2022 Copyright: Cardoso VTC |
-                <a class="text-reset fw-bold" href="{{ asset('/mentions') }}">Mentions légales</a> -
-                <a class="text-reset fw-bold" href="{{ asset('/confidentialite') }}">Politique de confidentialité</a>
+                <a class="text-reset fw-bold" href="{{ path('mentions') }}">Mentions légales</a> -
+                <a class="text-reset fw-bold" href="{{ path('confidentialite') }}">Politique de confidentialité</a>
                 <br>
                 Conception
                 <a class="text-reset" href="https://www.eric-parlaoz.fr/" target="_blank">Eric PARLAOZ</a>
-                /
+
             </div>
             <!-- Copyright -->
         </footer>
