--- a/templates/reservations/course.html.twig
+++ b/templates/reservations/course.html.twig
@@ -1,6 +1,8 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}Réservation VTC{% endblock %}
+{% block meta_description %}Cardoso VTC votre chauffeur privée sur Frontignan{% endblock %}
+
 
 {% block stylesheets %}
     {{ parent() }}
